--- a/src/app/barco/barco/barco.component.html
+++ b/src/app/barco/barco/barco.component.html
@@ -7,7 +7,7 @@
 <table>
     <thead>
         <tr>
-            <th>Matriculaa</th>
+            <th>Matricula</th>
             <th>Nombre</th>
             <th>Amarre</th>
             <th>Cuota</th>
