--- a/src/app/landing/landing.component.html
+++ b/src/app/landing/landing.component.html
@@ -20,7 +20,7 @@
                             <span>Inicio</span>
                         </a>
                     </li>
-                    <li>
+                    <li *ngIf="nombre!=null">
                         <a (click)="router.navigate(['/landing'], {fragment: 'features'})" pRipple
                             class="flex m-0 md:ml-5 px-0 py-3 hover:text-blue-500 text-2xl text-900 font-medium line-height-3">
                             <span>Zona Socios</span>
