Agregado control de registro de usuarios

--- a/src/app/login/login/login.component.html
+++ b/src/app/login/login/login.component.html
@@ -5,21 +5,21 @@
                 <div class="text-center mb-5">
                     <img src="assets/layout/images/Logo.png" alt="Image" height="50" class="mb-3">
                 </div>
-
+                <p-toast key="tst"></p-toast>
                 <div>
                     <label for="usuario" class="block text-900 text-xl font-medium mb-2">Nombre de usuario</label>
-                    <input type="text" id="usuario" [(ngModel)]="nombre"  placeholder="Usuario" pInputText class="w-full md:w-30rem mb-5" style="padding:1rem" required>
+                    <input type="text" id="usuario" [(ngModel)]="nombre"  placeholder="Usuario" pInputText class="w-full md:w-30rem mb-5" style="padding:1rem">
 
                     <label for="telefono" class="block text-900 font-medium text-xl mb-2">Numero de telefono</label>
-                    <input type="text" id="telefono" [(ngModel)]="telefono" placeholder="Telefono" pInputText class="w-full mb-5" style="padding:1rem" required>
+                    <input type="text" id="telefono" [(ngModel)]="telefono" placeholder="Telefono" pInputText class="w-full mb-5" style="padding:1rem">
 
                     <label for="clave" class="block text-900 font-medium text-xl mb-2">Clave de acceso</label>
-                    <input type="password" id="clave" [(ngModel)]="clave" placeholder="Clave" pInputText class="w-full mb-5" style="padding:1rem" required>
+                    <input type="password" id="clave" [(ngModel)]="clave" placeholder="Clave" pInputText class="w-full mb-5" style="padding:1rem">
 
                     <label for="clave2" class="block text-900 font-medium text-xl mb-2">Confirmar clave</label>
-                    <input type="password" id="clave2" [(ngModel)]="clave2" placeholder="Clave" pInputText class="w-full mb-5" style="padding:1rem" required>
+                    <input type="password" id="clave2" [(ngModel)]="clave2" placeholder="Clave" pInputText class="w-full mb-5" style="padding:1rem">
 
-                    <button pButton pRipple label="Sign In" class="w-full p-3 text-xl" (click)="registrar()" [routerLink]="['/']"></button>
+                    <button pButton pRipple label="Sign In" class="w-full p-3 text-xl" (click)="registrar()"></button>
                 </div>
             </div>
         </div>
