--- a/src/app/signin/signin/signin.component.html
+++ b/src/app/signin/signin/signin.component.html
@@ -6,6 +6,7 @@
                     <img src="assets/layout/images/Logo.png" alt="Image" height="50" class="mb-3">
                 </div>
 
+                <p-toast key="tst"></p-toast>
                 <div>
                     <label for="usuario" class="block text-900 text-xl font-medium mb-2">Nombre de usuario</label>
                     <input type="text" id="usuario" [(ngModel)]="nombre"  placeholder="Usuario" pInputText class="w-full md:w-30rem mb-5" style="padding:1rem" required>
@@ -13,7 +14,7 @@
                     <label for="clave" class="block text-900 font-medium text-xl mb-2">Clave de acceso</label>
                     <input type="password" id="clave" [(ngModel)]="clave" placeholder="Clave" pInputText class="w-full mb-5" style="padding:1rem" required>
 
-                    <button pButton pRipple label="Sign In" class="w-full p-3 text-xl" (click)="signIn()" [routerLink]="['/']"></button>
+                    <button pButton pRipple label="Sign In" class="w-full p-3 text-xl" (click)="signIn()"></button>
                 </div>
             </div>
         </div>
