--- a/src/app/landing/landing.component.html
+++ b/src/app/landing/landing.component.html
@@ -43,7 +43,7 @@
                 </div>
                 <div class="flex justify-content-between lg:block border-top-1 lg:border-top-none surface-border py-3 lg:py-0 mt-3 lg:mt-0"
                     *ngIf="nombre!=null">
-                    <button (click)="router.navigate(['/'])" pButton pRipple label="Hola, {{nombre}}"
+                    <button (click)="router.navigate(['/barcos'])" pButton pRipple label="Hola, {{nombre}}"
                         class="p-button-text p-button-rounded border-none font-light line-height-2 text-2xl hover:text-cyan-400 text-blue-500"></button>
                     <button (click)="cerrarSesion()" pButton pRipple label="Cerrar sesion"
                         class="p-button-rounded border-none ml-5 font-light line-height-1 bg-bluegray-200 text-2xl hover:bg-cyan-400 text-white"></button>
