--- a/src/app/signin/signin/signin.component.html
+++ b/src/app/signin/signin/signin.component.html
@@ -8,13 +8,24 @@
 
                 <p-toast key="tst"></p-toast>
                 <div>
-                    <label for="usuario" class="block text-900 text-xl font-medium mb-2">Nombre de usuario</label>
-                    <input type="text" id="usuario" [(ngModel)]="nombre"  placeholder="Usuario" pInputText class="w-full md:w-30rem mb-5" style="padding:1rem" required>
 
-                    <label for="clave" class="block text-900 font-medium text-xl mb-2">Clave de acceso</label>
-                    <input type="password" id="clave" [(ngModel)]="clave" placeholder="Clave" pInputText class="w-full mb-5" style="padding:1rem" required>
+                    <div class="pb-5">
+                        <span class="p-float-label text-xl">
+                            <input type="text" id="usuario" [(ngModel)]="nombre" pInputText class="w-full md:w-30rem" style="padding:1rem" required>
+                            <label for="usuario">Nombre de usuario</label>
+                        </span>
+                    </div>
 
-                    <button pButton pRipple label="Sign In" class="w-full p-3 text-xl" (click)="signIn()"></button>
+                    <div class="pb-5">
+                        <span class="p-float-label text-xl">
+                            <input type="password" id="clave" [(ngModel)]="clave" pInputText class="w-full md:w-30rem" style="padding:1rem" required>
+                            <label for="clave">Contraseña</label>
+                        </span>
+                    </div>
+
+                    <button pButton pRipple label="Sign In" class="w-full p-3 text-xl" (click)="signIn()"></button><br><br>
+
+                    <button pButton pRipple label="Volver" (click)="router.navigate(['/'])" class="w-full p-3 text-xl bg-bluegray-200" style="border: none;"></button>
                 </div>
             </div>
         </div>
