--- a/src/app/zonasocios/zonasocios/zonasocios.component.html
+++ b/src/app/zonasocios/zonasocios/zonasocios.component.html
@@ -21,7 +21,7 @@
                         </a>
                     </li>
                     <li *ngIf="nombre==null">
-                        <a (click)="router.navigate(['/zonasocios'], {fragment: 'features'})" pRipple
+                        <a (click)="router.navigate(['/landing'], {fragment: 'features'})" pRipple
                             class="flex m-0 md:ml-5 px-0 py-3 hover:text-blue-500 text-2xl text-900 font-medium line-height-3">
                             <span>Zona Socios</span>
                         </a>
@@ -65,30 +65,6 @@
                 <img src="assets/demo/images/landing/Boat.png" alt="Hero Image" class="w-9 md:w-auto">
             </div>
         </div><br><br>
-
-        <div id="features" class="py-4 px-4 lg:px-8 mt-5 mx-0 lg:mx-8">
-            <div class="text-center">
-                <h2 class="text-900 font-normal mb-2">Opiniones de nuestros socios</h2>
-                <span class="text-600 text-2xl">No solo sois importantes, sois nuestra familia</span>
-            </div>
-
-            <div class="grid justify-content-center">
-                <div class="col-12 mt-8 mb-8 p-2 md:p-8"
-                    style="border-radius:20px; background:linear-gradient(0deg, rgba(255, 255, 255, 0.6), rgba(255, 255, 255, 0.6)), radial-gradient(77.36% 256.97% at 77.36% 57.52%, #EFE1AF 0%, #C3DCFA 100%);">
-                    <div
-                        class="flex flex-column justify-content-center align-items-center text-center px-3 py-3 md:py-0">
-                        <h3 class="text-gray-900 mb-2">Ed Sheeran</h3>
-                        <span class="text-gray-600 text-2xl">Socio Premium</span>
-                        <p class="text-gray-900 sm:line-height-2 md:line-height-4 text-2xl mt-4"
-                            style="max-width:800px;">“Desde que tengo mis barcos registrados en este club náutico, no
-                            solo duermo con la tranquilidad de que están en las mejores manos, sino que también disfruto
-                            de los viajes en grupo propuestos por los organizadores.”</p>
-                        <img src="assets/layout/images/Logo.png" class="mt-4" height="70" alt="Company logo">
-
-                    </div>
-                </div>
-            </div>
-        </div>
 
         <div id="highlights" class="py-4 px-4 lg:px-8 mx-0 my-6 lg:mx-8">
             <div class="text-center">
