--- a/src/app/zonasocios/zonasocios/zonasocios.component.html
+++ b/src/app/zonasocios/zonasocios/zonasocios.component.html
@@ -52,30 +52,28 @@
         </div>
 
         <div id="hero" class="flex flex-column pt-4 px-4 lg:px-8 overflow-hidden"
-            style="background: linear-gradient(0deg, hwb(157 11% 33% / 0.2), hwb(170 10% 5% / 0.2)), radial-gradient(77.36% 256.97% at 77.36% 57.52%, #3acde7 0%, hwb(212 57% 7%) 100%); clip-path: ellipse(150% 87% at 93% 13%);">
+            style="background: linear-gradient(0deg, rgba(78, 202, 224, 0.2), rgba(23, 63, 173, 0.2)), radial-gradient(77.36% 256.97% at 77.36% 57.52%, hsl(272, 63%, 69%) 0%, #7937af 100%); clip-path: ellipse(150% 87% at 93% 13%);">
             <div class="mx-4 md:mx-8 mt-0 md:mt-4">
-                <h1 class="text-6xl font-bold text-gray-900 line-height-2"><span class="font-light block">Bienvenido a
-                        Bahía Mar</span>¡Tu club de vacaciones favorito!</h1>
-                <p class="font-normal text-2xl line-height-3 md:mt-3 text-gray-700">En Bahía Mar, podrás disfrutar de
-                    las mejores experiencias a la hora de viajar en barco.</p>
+                <h1 class="text-6xl font-bold text-white line-height-2">Bienvenido a la zona de Socios!</h1>
+                <p class="font-normal text-2xl line-height-3 md:mt-3 text-white">En esta sección podrás descubrir todas las ventajas que tendrás por ser socio en Bahía Mar</p>
                 <button pButton pRipple type="button" label="Descubre las experiencias"
                     class="p-button-rounded text-xl border-none mt-3 bg-blue-500 font-normal line-height-3 px-3 text-white"></button>
             </div>
             <div class="flex justify-content-center md:justify-content-end">
-                <img src="assets/demo/images/landing/Boat.png" alt="Hero Image" class="w-9 md:w-auto">
+                <img src="assets/layout/images/Socios.png" alt="Hero Image" class="w-9 md:w-auto">
             </div>
         </div><br><br>
 
         <div id="highlights" class="py-4 px-4 lg:px-8 mx-0 my-6 lg:mx-8">
             <div class="text-center">
-                <h2 class="text-900 font-normal mb-2">Vive experiencias únicas</h2>
-                <span class="text-600 text-2xl">De la mano de los mejores profesionales</span>
+                <h2 class="text-900 font-normal mb-2">Conoce las ventajas</h2>
+                <span class="text-600 text-2xl">De formar parte de esta familia</span>
             </div>
 
             <div class="grid mt-8 pb-2 md:pb-8">
                 <div class="flex justify-content-center col-12 lg:col-6 bg-cyan-200 p-0 flex-order-1 lg:flex-order-0"
-                    style="border-radius:8px; background:linear-gradient(0deg, rgba(255, 255, 255, 0.6), rgba(255, 255, 255, 0.6)), radial-gradient(77.36% 256.97% at 77.36% 57.52%, hsl(98, 75%, 65%) 0%, hsl(213, 69%, 57%) 100%);">
-                    <img src="assets/layout/images/PadelMujer.png" class="w-7" alt="mockup mobile">
+                    style="border-radius:8px; background:linear-gradient(0deg, #fbedb1, rgb(46, 153, 224));">
+                    <img src="assets/layout/images/Playa.png" class="w-12" alt="mockup mobile">
                 </div>
 
                 <div class="col-12 lg:col-6 my-auto flex flex-column lg:align-items-end text-center lg:text-right">
@@ -90,22 +88,39 @@
                 </div>
             </div>
 
-            
-
-            <div class="grid my-8 pt-2 md:pt-8">
-                <div class="col-12 lg:col-6 my-auto flex flex-column text-center lg:text-left lg:align-items-start">
-                    <div class="flex align-items-center justify-content-center bg-purple-200 align-self-center lg:align-self-start"
-                        style="width:4.2rem; height:4.2rem; border-radius:10px;">
-                        <i class="pi pi-fw pi-user text-5xl text-purple-400"></i>
-                    </div>
-                    <h2 class="line-height-1 text-900 text-4xl font-normal">¡Conoce a gente maravillosa!</h2>
-                    <span class="text-700 text-2xl line-height-3 mr-0 md:mr-2" style="max-width:650px;">Preparate para conocer a gente apasionada por los barcos y por salir
-                    a conocer el mundo marítimo!</span>
+            <div class="grid mt-8 pb-2 md:pb-8">
+                <div class="flex justify-content-center col-12 lg:col-6 bg-cyan-200 p-0 flex-order-1 lg:flex-order-0"
+                    style="border-radius:8px; background:linear-gradient(0deg, rgba(255, 255, 255, 0.6), rgba(255, 255, 255, 0.6)), radial-gradient(77.36% 256.97% at 77.36% 10.52%, hwb(189 52% 7%) 0%, #ad3276 100%);">
+                    <img src="assets/layout/images/Vinos.png" class="w-7" alt="mockup mobile">
                 </div>
 
-                <div class="flex justify-content-end flex-order-1 sm:flex-order-2 col-12 lg:col-6 p-0"
-                    style="border-radius:8px; background:linear-gradient(0deg, rgba(255, 255, 255, 0.6), rgba(255, 255, 255, 0.6)), radial-gradient(77.36% 256.97% at 77.36% 57.52%, hwb(298 30% 6%) 0%, hsl(268, 82%, 57%) 100%);">
-                    <img src="assets/layout/images/Personas.png" class="w-11" alt="mockup">
+                <div class="col-12 lg:col-6 my-auto flex flex-column lg:align-items-end text-center lg:text-right">
+                    <div class="flex align-items-center justify-content-center bg-yellow-200 align-self-center lg:align-self-end"
+                        style="width:4.2rem; height:4.2rem; border-radius: 10px;">
+                        <i class="pi pi-fw pi-sun text-5xl text-yellow-700"></i>
+                    </div>
+                    <h2 class="line-height-1 text-900 text-4xl font-normal">¡Disfruta del mejor deporte!</h2>
+                    <span class="text-700 text-2xl line-height-3 ml-0 md:ml-2" style="max-width:650px;">En Bahía Mar, tendrás acceso
+                    a las mejores pistas para practicar todo tipo de deportes. Nosotros te proporcionaremos todo el material necesario,
+                así que no tienes que preocuparte de nada!</span>
+                </div>
+            </div>
+
+            <div class="grid mt-8 pb-2 md:pb-8">
+                <div class="flex justify-content-center col-12 lg:col-6 bg-cyan-200 p-0 flex-order-1 lg:flex-order-0"
+                    style="border-radius:8px; background:linear-gradient(0deg, rgba(255, 255, 255, 0.6), rgba(255, 255, 255, 0.6)), radial-gradient(77.36% 256.97% at 77.36% 77.52%, hsl(98, 75%, 65%) 0%, hwb(213 12% 8%) 100%);">
+                    <img src="assets/layout/images/Restaurante.png" class="w-12" alt="mockup mobile">
+                </div>
+
+                <div class="col-12 lg:col-6 my-auto flex flex-column lg:align-items-end text-center lg:text-right">
+                    <div class="flex align-items-center justify-content-center bg-yellow-200 align-self-center lg:align-self-end"
+                        style="width:4.2rem; height:4.2rem; border-radius: 10px;">
+                        <i class="pi pi-fw pi-sun text-5xl text-yellow-700"></i>
+                    </div>
+                    <h2 class="line-height-1 text-900 text-4xl font-normal">¡Disfruta del mejor deporte!</h2>
+                    <span class="text-700 text-2xl line-height-3 ml-0 md:ml-2" style="max-width:650px;">En Bahía Mar, tendrás acceso
+                    a las mejores pistas para practicar todo tipo de deportes. Nosotros te proporcionaremos todo el material necesario,
+                así que no tienes que preocuparte de nada!</span>
                 </div>
             </div>
         </div>
