--- a/src/app/zonasocios/zonasocios/zonasocios.component.html
+++ b/src/app/zonasocios/zonasocios/zonasocios.component.html
@@ -15,7 +15,7 @@
                 <ul
                     class="list-none p-0 m-0 flex lg:align-items-center select-none flex-column lg:flex-row cursor-pointer">
                     <li>
-                        <a (click)="router.navigate(['/inicio'], {fragment: 'home'})" pRipple
+                        <a (click)="router.navigate(['/'], {fragment: 'home'})" pRipple
                             class="flex m-0 md:ml-5 px-0 py-3 hover:text-blue-500 text-2xl text-900 font-medium line-height-3">
                             <span>Inicio</span>
                         </a>
