--- a/src/app/registrobarco/registrobarco/registrobarco.component.html
+++ b/src/app/registrobarco/registrobarco/registrobarco.component.html
@@ -44,7 +44,7 @@
 
                     <button pButton pRipple label="Matricular" class="w-full p-3 text-xl" (click)="enviar()"></button><br><br>
 
-                    <button pButton pRipple label="Volver" (click)="router.navigate(['/'])" class="w-full p-3 text-xl bg-bluegray-200" style="border: none;"></button>
+                    <button pButton pRipple label="Volver" (click)="router.navigate(['/barcos'])" class="w-full p-3 text-xl bg-bluegray-200" style="border: none;"></button>
                 </div>
             </div>
         </div>
