--- a/src/app/barcos/barcos/barcos.component.html
+++ b/src/app/barcos/barcos/barcos.component.html
@@ -78,7 +78,7 @@
                     <td>{{articulo.n_amarre}}</td>
                     <td>{{articulo.cuota}}€</td>
                     <td><button class="btn btn-primary">Registrar</button></td>
-                    <td><button class="btn btn-success" (click)="router.navigate(['/editarbarco'])">Editar</button></td>
+                    <td><button class="btn btn-success" (click)="router.navigate(['/editarbarco', { matricula: articulo.matricula }])">Editar</button></td>
                     <td><button class="btn btn-danger" (click)="borrar(articulo.matricula)">Borrar</button></td>
                   </tr>
                 </tbody>
